--- a/Userstory2/main/default/layouts/DX_Object__c-DX Object Layout.layout-meta.xml
+++ b/Userstory2/main/default/layouts/DX_Object__c-DX Object Layout.layout-meta.xml
@@ -10,6 +10,14 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DX_email__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DX_text_area__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
